<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:backgroundTint="#A8A5A5"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/RGBLayout"
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/redSeekBarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/redSeekBar"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/redSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/greenSeekBarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/greenSeekBar"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/greenSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/blueSeekBarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/blueSeekBar"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/blueSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selectionLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/randomFaceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="0"
                android:backgroundTint="#000000"
                android:gravity="center"
                android:text="@string/randomFaceButton"
                android:textColor="#FFFFFF" />

            <RadioGroup
                android:id="@+id/radioButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checkedButton="@id/skinRadioButton"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/eyesRadioButton"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="0"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/radioEyes"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/skinRadioButton"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/radioSkin"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/hairRadioButton"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="0"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/radioHair"
                    android:textSize="20sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topRightLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hairStyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:layout_weight="0"
                android:text="@string/hairStyle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/hairStyleSpinner"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:entries="@array/hairstyles" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/surfaceViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.example.facemaker.Face
            android:id="@+id/faceSurfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>